--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="train-stopper flexiable-container">
         <div class="half-width">
             <h1>Welcome To </h1>
-            <h1><span class="orange"> Jhankar Mahbub </span>World!</h1>
+            <h1><span class="orange"> Parsa's </span>World!</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
